<resources>
    <string name="app_name">Hydro Homie</string>
    <string name="totalHydration">Total Hydration:</string>
    <string name="goalStreak">Hydration Goal Streak:</string>
    <string name="graph">TODO</string>
    <string name="add_drink">Add Drink</string>
    <string name="set_time">Set Time</string>
    <string name="keep_it_up">KEEP IT UP!</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="forgot">Forgot password?</string>
    <string name="loginButton">Login</string>
    <string name="submitButton">Submit</string>
    <string name="signUpPrompt">Don\'t have an account? Sign up now!</string>
    <string name="navHome">Home</string>
    <string name="navHistory">History</string>
    <string name="navSettings">Settings</string>
    <string name="profileButton">Profile"</string>
    <string name="age">Age"</string>
    <string name="weight">Weight(lb)"</string>
    <string name="save">Save"</string>
    <string name="aboutUs">About Us"</string>
    <string name="chooseSize">Choose a drink size:</string>
    <string name="eight">8 oz.</string>
    <string name="twelve">12 oz.</string>
    <string name="sixteen">16 oz.</string>
    <string name="custom">Custom:</string>
    <string name="setTimer">Set Timer</string>
    <string name="time">Time:</string>
    <string name="min">minutes</string>
    <string name="startTimer">Start Timer</string>
    <string name="stopReminders">Stop Reminders</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channel_name">reminderChannelName</string>
    <string name="history">History</string>
</resources>
