<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="30dip"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/LoginLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="30dip"
        app:srcCompat="@drawable/mascot_logo" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="20dip"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingHorizontal="15dp" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="15dp" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:gravity="end"
        android:text="@string/forgot" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/addDrinkButton"
        android:text="@string/loginButton" />

    <TextView
        android:id="@+id/signupPrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/signUpPrompt"
        android:textSize="24sp"
        android:onClick="onSignUp"/>

</LinearLayout>