<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/popupColor">

    <TextView
        android:id="@+id/windowTitle"
        android:layout_width="308dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="61dp"
        android:text="@string/chooseSize"
        android:textSize="22sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/drinkOptions"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="100dp">

        <RadioButton
            android:id="@+id/option1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="findFinalAmount"
            android:text="@string/eight"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/option2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="findFinalAmount"
            android:text="@string/twelve"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/option3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="findFinalAmount"
            android:text="@string/sixteen"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/optionCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="findFinalAmount"
            android:text="@string/custom"
            android:textSize="18sp" />

    </RadioGroup>

    <EditText
        android:id="@+id/customAmount"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/windowTitle"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="76dp"
        android:ems="10"
        android:inputType="numberSigned" />

    <Button
        android:id="@+id/addDrinkButton"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/windowTitle"
        android:layout_centerInParent="true"
        android:layout_marginTop="200dp"
        android:background="@drawable/rounded_button"
        android:text="@string/add_drink" />

</RelativeLayout>