<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/popupColor"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.TimerPopUp">

    <TextView
        android:id="@+id/timerHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/setTimer"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/timePrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:text="@string/time"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/timeInput"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/minHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/min" />
    </LinearLayout>

    <Button
        android:id="@+id/timerStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/addDrinkButton"
        android:onClick="submitValue"
        android:paddingHorizontal="15dp"
        android:text="@string/startTimer" />

    <Button
        android:id="@+id/cancelTimers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/addDrinkButton"
        android:onClick="cancel"
        android:paddingHorizontal="15dp"
        android:text="@string/stopReminders" />
</LinearLayout>