<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">


    <!--    <ProgressBar

        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="324dp"
        android:layout_height="149dp"
        android:layout_above="@+id/addButton"
        android:layout_below="@+id/progressText"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="46dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="48dp"
        android:max="100"
        android:progress="50"
        android:progressTint="#245AFF" />-->

    <TextView
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="0"
            android:src="@drawable/mascot_logo" />

        <TextView
            android:id="@+id/totalText"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0"
            android:fontFamily="@font/roboto_medium_italic"
            android:text="@string/keep_it_up"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/textColor"
            android:textSize="30sp" />

        <Button
            android:id="@+id/reminderButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_button"
            android:text="@string/set_time"
            android:textColor="@color/textColor" />

    </LinearLayout>

    <TextView
        android:id="@+id/progressText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/textColor" />

    <me.itangqi.waveloadingview.WaveLoadingView
        android:id="@+id/waveLoadingView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:wlv_borderColor="@color/navColor"
        app:wlv_borderWidth="3dp"
        app:wlv_round_rectangle="true"
        app:wlv_shapeType="circle"
        app:wlv_titleBottomColor="@android:color/white"
        app:wlv_titleBottomSize="24sp"
        app:wlv_titleBottomStrokeColor="@android:color/holo_blue_dark"
        app:wlv_titleBottomStrokeWidth="3dp"
        app:wlv_titleTopColor="@android:color/white"
        app:wlv_titleTopSize="24sp"
        app:wlv_titleTopStrokeColor="@android:color/holo_blue_dark"
        app:wlv_titleTopStrokeWidth="3dp"
        app:wlv_triangle_direction="north"
        app:wlv_waveAmplitude="55"
        app:wlv_waveColor="#16c2fc" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_button"
        android:paddingHorizontal="50dp"
        android:text="@string/add_drink"
        android:textColor="@color/textColor" />


    <Button
        android:id="@+id/drinkSelectButton"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="115dp"
        android:text="size" />

</LinearLayout>

